--- a/RR_8_AleksanderKarbowiak_454783.qmd
+++ b/RR_8_AleksanderKarbowiak_454783.qmd
@@ -15,20 +15,24 @@ editor: visual
 
 [![The Office cast](The_OFFICE_CREW.jpg){fig-alt="The Office cast" fig-align="center"}](https://www.google.com/search?sca_esv=6b1c5e95a3d0b06b&rlz=1C1GCEB_enPL961PL962&q=the+office&uds=AMwkrPth2lwGf-lsu6J4oEsDB3N57nv8C_6kM3GXelCSuJJYTDzI_9U-OrT0-fhjmxLR2T3Wbbz66HRSaZs31ygG9zKaKDy5sBaxWWDrJtp6L4_8zi1VfHKg1Df2AiGsl-ASZcB97ydFBAWRG8nnY6sawasin1vI0bS72KtVIvh5lkHb9thIR6eAKlhUWdBX-KEdydEIwo2T5BFuVjkhPLYhVas219__5-t2OzFooLTS8k01nnmTiTLbOHjluqr1UR-fuQadGyKzRyWx0WLos1C5SVfGYV6MgfpTPZwFhnukIbt9z8TxrYP7QEZlq5bHT7rOrdjjNciqoiuUnVDkg6WGRlz_pWrHkQ&udm=2&prmd=ivnbz&sa=X&ved=2ahUKEwjguIa1wcyFAxU1RvEDHcj9BP8QtKgLegQICxAB&biw=1536&bih=703&dpr=1.25#vhid=okH8ui5F4YWQOM&vssid=mosaic)
 
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
-```{r}
-1 + 1
-```
-
-You can add options to executable code like this
+## Ratings of The Office
 
 ```{r}
 #| echo: false
-2 * 2
+suppressPackageStartupMessages({
+suppressWarnings({
+library(readxl)
+library(vtable)
+data_office <- read_excel("theOffice_Ratings.xlsx")
+})
+})
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+Table below presents summary statistics of ***Rotten Tomatoes*** critical responses for every season of ***The Office***. The data was obtained from [*Wikipedia - The Office*](https://en.wikipedia.org/wiki/The_Office_(American_TV_series)#cite_note-148)*.*
+
+```{r}
+st(data_office)
+```
+
+The series had nine seasons. The average rating of the seasons was 7.7/10. The best season was rated 8.4 out of 10, and the worst season was rated 6.3 out of 10. On average, a season of ***The Office*** series got 22 professional reviews.
 :::
